# sadDB

./: .editorconfig  .travis.yml  CMakeLists.txt  LICENSE  README.md
client_src/: main.cpp
generator_src/: main.cpp
relations/: A1.sh  A2.sh  A3.sh  A4.sh  A5.sh  A6.sh  random
relations/experiment1/1/: R.txt
relations/experiment1/6/: S.txt
relations/experiment2/1/: S.template.txt  S.txt
relations/experiment2/2/: R.template.txt  R.txt
relations/experiment3/1/: S.txt
relations/experiment3/2/: R.template.txt  S.template.txt  S.txt
relations/proof/1/: R.template.txt  R.txt  S.template.txt  S.txt
relations/proof/2/: R.template.txt  R.txt  S.template.txt  S.txt
relations/test_1/1/: R.txt
relations/test_1/2/: S.template.txt  S.txt
relations/test_2/1/: R.template.txt  R.txt  S.template.txt
relations/test_2/2/: R.txt
results/proof/: 1-out.txt  1-rel.txt  2-out.txt  2-rel.txt
src/: address.h  connection.h  enums.h  main.cpp  master.cpp  master.h  measurement_traits.h  node.h  phase.h  phase_1.h  phase_2.h  phase_3.h  record.cpp  record.h  relation.cpp  relation.h  slave.cpp  slave.h  tcp_client.h  tcp_server.h  tcp_traits.h  track_join_data.h
src/serializer_example/: serialized_file_example.txt  serializer_poc.cpp
test/: tcp_client.cpp  tcp_server.cpp
